Fix results row overflowing issue

--- a/src/SearchResults.css
+++ b/src/SearchResults.css
@@ -45,6 +45,6 @@
 }
 
 .btn-cover {
-  margin-right: 0 !important;
-  margin-left: auto !important;
+  margin: auto !important;
+  width: 100%;
 }
